--- a/FCF3_FIRMWARE/FCF3.ioc
+++ b/FCF3_FIRMWARE/FCF3.ioc
@@ -21,8 +21,7 @@ Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Standard
-I2C1.IPParameters=I2C_Speed_Mode,Timing
-I2C1.Timing=0x2000090E
+I2C1.IPParameters=I2C_Speed_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
